Angular client - Resource

--- a/angular-client/src/index.html
+++ b/angular-client/src/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="description" content="Angular & PHP CodeIgniter server through OAuth 2.0 OpenID Connect">
     <title>Angular OIDC PHP</title>
     <base href="/">
 
